Edited HTML file done

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title> MY APP </title>
 </head>
 <body>
-This is my APP, ANd I am okay with it 
+This is my APP, ANd I am okay with it. FIne
 </body>
 </html>
